style.css
:root {
    --color-bg: rgba(255, 255, 255, 1);
    --color-bg-object: rgba(221, 241, 248, 0.6);
    --color-secondary: rgb(70, 155, 235);
    --color-secondary-text: rgb(255, 255, 255);
}

* {
    margin: 0;
    border: 0;
    padding: 0;
}

html, body, .container, .sub-container {
    width: 100%;
    height: 100%;
}

/* css grid */

.container, .sub-container,
.sidebar, .header, .content,
.search, .user, .greeting, .actionbar,
.project-section, .announcement-section, .trending-section,
.projects, .news {
    display: grid;
}

img {
    max-width: 1.5rem;
    max-height: 1.5rem;
}

/* sidebar */

.menu > *, .sidebar-header {
    display: grid;
    grid-template-columns: auto 1fr;
    filter: invert(1);
    padding: 0.7rem 1.3rem;
    gap: 8px;
    align-items: center;
    font-size: large;
    font-weight: bolder;
}

.menu > * > img, .sidebar-header > img {
    max-width: 2.5rem;
    max-height: 2.5rem;
}

.sidebar-header {
    font-size: xx-large;
}


/* container */

.container {
    grid-template-columns: 1fr 3fr;
}

.sidebar {
    grid-row: span 2;
    grid-template-rows: 1fr 15fr;
    background-color: var(--color-secondary);
    box-shadow: 0 0 -1px -2px var(--color-secondary);
}

.sub-container {
    grid-template-rows: auto 4fr;
}

.header {
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 2fr;
    box-shadow: 0 0 -1px -2px var(--color-bg);
}

.content {
    grid-template-columns: 3fr 1fr;
    background-color: var(--color-bg-object);
    padding: 16px;
}

.projects {
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    gap: 16px;
}

.news {
    grid-template-rows: 1fr 1fr;
}

/* header */
.search, .user, .greeting, .actionbar {
    gap: 4px;
    padding: 0.7rem;
    align-items: center;
}

.search {
    grid-template-columns: auto 1fr;
}

input {
    height: 1.5rem;
    margin-right: 4rem;
    background-color: var(--color-bg-object);
    border-radius: 8px;
}

.user {
    grid-template-columns: repeat(2, auto) 1fr;
    justify-content: space-around;
    padding-left: 4rem;
    gap: 16px;
}

.userimg {
    max-width: 2rem;
    max-height: 2rem;
    border-radius: 16px;
}

.username {
    font-weight: bold;
}

.greeting {
    grid-template-columns: auto 1fr;
    gap: 8px;
}

.big-userimg {
    max-width: 4rem;
    max-height: 4rem;
    border-radius: 32px;
    padding: 0 1.5rem;
}

.usertag {
    font-size: 2rem;
    font-weight: bolder;
}

.actionbar {
    grid-template-columns: repeat(3, auto);
    place-content: space-around;
}

button[class^="button-action-"]{
    padding: 0.5rem 1rem;
    background-color: var(--color-secondary);
    color: var(--color-secondary-text);
    border-radius: 16px;
}

/* content header*/

.project-header, .announcement-header, .trending-header {
    font-weight: bolder;
    align-self: center;
    font-size: large;
}

/* projects */

.project-section {
    grid-template-rows: 1fr 15fr;
}

.card {
    display: grid;
    grid-template-rows: auto 1fr auto;
    background-color: var(--color-bg);
    border-radius: 16px;
    padding: 8px;
    box-shadow: -5px 0px 0px 0px var(--color-secondary);
}

.card-title, .card-desc {
    font-size: large;
    padding: 4px;
}

.card-title {
    font-weight: bolder;
}

.card-act {
    display: grid;
    grid-template-columns: repeat(3, auto);
    justify-content: right;
}

.card-act > img {
    max-width: 3rem;
    max-height: 3rem;
}

/* News */

